# 2023-oss-in-energy-data

./: .gitignore  .gitmodules  .vercelignore  DASHBOARD_SUMMARY.md  DEPTH_4_5_EXPLORATION.md  FIX_REPO_URL_SUMMARY.md  GITHUB_TOKEN_SETUP.md  IMPLEMENTATION_SUMMARY.md  MULTI_TIER_SCANNER_GUIDE.md  PROJECT_EXPLORER_FILTER_FIX.md  PROJECT_ORGANIZATION.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_MULTI_TIER.md  README.md  README_batch_scorecard.md  REPOS_CLONING_SUMMARY.md  SBOM_SCANNING_GUIDE.md  VERSION_TRACKING_EXPLAINED.md  VISUALIZATION_GUIDE.md  VULNERABILITY_SCAN_REPORT.md  add_submodules.py  all_repos_sorted.txt  analyze_vulnerabilities.py  batch_criticality_score.py  check_progress.sh  clone_and_scan.py  clone_remaining_vulnerable.py  clone_vulnerable_repos_smart.py  commits.json  create_fixed_detailed_csv.py  criticality_analysis.csv  criticality_and_scorecard.csv  criticality_scores.txt  csv_template.tmpl  final_merged_results.csv  matched.json  merge_summary.json  paper.txt  (+20 more)
data/: dependencies.db  (+1 more)
dependency_analyzer/: DP_OPTIMIZATION.md  Django_cve_report.json  README.md  README_CVE_FEATURES.md  __init__.py  analyzer.py  cli.py  config.py  cve_scanner.py  database.py  dependency_resolver.py  dependency_resolver_old.py  env_example.txt  extractor.py  github_client.py  impact_analyzer.py  most_vulnerable_repositories.json  multi_tier_scanner.py  parsers.py  pyproject.toml  requirements.txt  run_full_analysis.py  sbom_cve_scanner.py  sbom_scraper.py
dependency_analyzer/full_analysis_results/: EXECUTIVE_SUMMARY.json  cve_summary.csv
(+543 files in other folders)
